# celery-rabbitmq-demo

./: .gitignore  README.md
consumer/: .env  main.py  pyproject.toml  tasks.py
producer/: main.py  pyproject.toml  tasks.py
