[tool.poetry]
name = "producer"
version = "0.1.0"
description = ""
authors = ["Peter Yang <peter.yang@goodfinance.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.2.7"
pydantic = "^1.10.8"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
